Mejoras: Implementación de la generación de facturas y la carga de comprobantes de pago
- Se agregó el componente InvoiceGenerator para generar y descargar facturas en formato PDF.

- Se implementó el componente PaymentProofUploader para cargar comprobantes de pago a ImageKit.

- Se creó imagekitService para gestionar la carga y validación de archivos.

- Se desarrolló storageService para gestionar la carga de archivos a Firebase Storage.

- Se agregaron estilos CSS a los mapas de Leaflet para mejorar la visualización y la adaptabilidad.

--- a/.env
+++ b/.env
@@ -7,6 +7,12 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=180166706157
 VITE_FIREBASE_APP_ID=1:180166706157:web:fd48991cb436f1a3fa9de4
 VITE_FIREBASE_MEASUREMENT_ID=G-HXV97K22EX
 
+# ImageKit Configuration (para comprobantes de pago)
+# Obtén estas credenciales de: https://imagekit.io/dashboard/developer/api-keys
+VITE_IMAGEKIT_PUBLIC_KEY=public_hWPUzLOqwV1isPhkJ6IQldtIHm0=
+VITE_IMAGEKIT_PRIVATE_KEY=private_EaYRgaBQbUUfcWXC9R1FpBgbARw=
+VITE_IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/media619
+
 # Configuración de la aplicación
 VITE_APP_NAME="Zapastroso"
 VITE_APP_VERSION="1.0.0"
