--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
     "firebase": "^12.4.0",
     "firebase-admin": "^13.5.0",
     "firebase-functions": "^6.6.0",
+    "html2canvas": "^1.4.1",
+    "imagekit": "^6.0.0",
+    "jspdf": "^3.0.3",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.548.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
     "uuid": "^13.0.0"
   },
