--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "firebase-tools": "^14.22.0",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
+    "prettier": "^3.6.2",
     "tailwindcss": "^4.1.16",
     "vite": "npm:rolldown-vite@7.1.14"
   },
